# niyam

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.codex/: bedrock.config.example.toml
.github/workflows/: deploy-web.yml  niyam-policy-ci.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: app.controller.ts  app.module.ts  main.ts
apps/api/src/demo/: demo.controller.ts  demo.module.ts  demo.service.ts  (+4 more)
apps/api/test/: demo.e2e.test.ts  document-client.test.ts  policy-ci.e2e.test.ts  policy-compiler.test.ts
apps/verification/: Dockerfile  pyproject.toml  requirements.container.txt  requirements.txt
apps/verification/app/: __init__.py  main.py
apps/verification/tests/: test_solver.py
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json
contracts/: scholarship.active.json
docs/: ARCHITECTURE.md  DEMO_RUNBOOK.md  JUDGE_QA.md  Niyam-Hackathon-Pitch-Deck.pptx  SUBMISSION.md  THREAT_MODEL.md
docs/demo/: verified-production-evidence.json
examples/decision-node/: openapi.json  package.json
examples/decision-node/src/: cli.mjs  eligibility.mjs  server.mjs
examples/decision-node/test/: regression.test.mjs
examples/decision-protected/: eligibility.mjs
examples/decision-python/: cli.py  eligibility.py  test_eligibility.py
infra/aws/: README.md  deploy.sh  deployer-policy.json  template.yaml
scripts/: generate-demo-policy.py  judge-smoke.mjs  live-ai-reliability.mjs  policy-ci-guard.mjs  python-tool.mjs
(+20 files in other folders)
